deps: remove JAXB dependency