@@ -31,11 +31,11 @@ import com.walmartlabs.concord.sdk.SecretService;
 
 import javax.inject.Inject;
 import javax.inject.Named;
-import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
@@ -130,7 +130,7 @@ public class SecretServiceImpl implements SecretService {
         byte[] input;
 
         try {
-            input = DatatypeConverter.parseBase64Binary(s);
+            input = Base64.getDecoder().decode(s);
         } catch (Exception e) {
             throw new IllegalArgumentException("Invalid encrypted string value, please verify that it was specified/copied correctly: " + e.getMessage());
         }
